# api_stading

./: .gitignore  hello.py  pyproject.toml  test.csv
.devcontainer/: Dockerfile  devcontainer.json  requires.txt
backend/: main.py  records.csv  records_old.csv  run.py  task.csv  test.ipynb  test.py
backend/api/: api.py
backend/api/datas/: taskdata.csv  worktimedata.csv
backend/api/dependency/: managemant_csv.py
backend/api/endpoints/: effort_assignment.py  task_manager.py  work_time_calculation.py  work_time_manager.py
backend/api/schema/: calculation.py  task.py  work_time.py
backend/datas/: __init__.py  front_2_back.py
backend/func/: __init__.py  delete.py  get.py  registar.py  total.py
backend_docker/: dockerfile
backend_docker/backend/: main.py  pyproject.toml
backend_docker/backend/api/: api.py
backend_docker/backend/api/datas/: effort_assignment_data.csv  taskdata.csv  worktimedata.csv
backend_docker/backend/api/endpoints/: work_time_manager.py
backend_docker/backend/api/schema/: effort_assignment.py  task.py  work_time.py
frontend/: main.py  run.py
frontend/aip_cliant/: api_cliant.py
frontend/templates/: index copy.html  index.html  template.html
frontend/ui/: __init__.py  delete.py  effort_assignment.py  registar.py  set.py  task.py  total.py  work_time.py  wroktime.py  wroktime_calucration.py
frontend_docker/.devcontainer/: Dockerfile  devcontainer.json
frontend_docker/react/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend_docker/react/src/: App.tsx
